--- a/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_blocks
     - node.type.page
+    - paragraphs.paragraphs_type.block_map_tertiary
     - paragraphs.paragraphs_type.blockarticleteaser
     - paragraphs.paragraphs_type.blockaudiofragment
     - paragraphs.paragraphs_type.blockblogpost
@@ -80,6 +81,7 @@ settings:
       blockstoryinfoimages: blockstoryinfoimages
       blocktext: blocktext
       blockfiltercontent: blockfiltercontent
+      block_map_tertiary: block_map_tertiary
       blockpersonaselector: blockpersonaselector
     target_bundles_drag_drop:
       blockhowtoadvertise:
@@ -106,18 +108,18 @@ settings:
       blocklatest:
         enabled: true
         weight: 13
+      link:
+        weight: 13
+        enabled: false
       blockimagecarousel:
         enabled: true
         weight: 13
-      link:
-        weight: 13
+      step:
+        weight: 15
         enabled: false
       blockarticleteaser:
         enabled: true
         weight: 15
-      step:
-        weight: 15
-        enabled: false
       blockaudiofragment:
         enabled: true
         weight: 16
@@ -178,18 +180,18 @@ settings:
       blocksmallheading:
         enabled: true
         weight: 37
-      slideheromain:
-        weight: 38
-        enabled: false
       blocksmallimage:
         enabled: true
         weight: 38
-      stat:
-        weight: 39
+      slideheromain:
+        weight: 38
         enabled: false
       blocksmallinfo:
         enabled: true
         weight: 39
+      stat:
+        weight: 39
+        enabled: false
       statistic:
         weight: 40
         enabled: false
@@ -202,13 +204,25 @@ settings:
       blockfiltercontent:
         enabled: true
         weight: 48
+      block_map_tertiary:
+        enabled: true
+        weight: 48
       blockpersonaselector:
         enabled: true
         weight: 54
       stories:
         weight: 79
         enabled: false
+      networkoverviewitem:
+        weight: 82
+        enabled: false
+      program:
+        weight: 84
+        enabled: false
       steppurchase:
         weight: 84
+        enabled: false
+      stepmap:
+        weight: 91
         enabled: false
 field_type: entity_reference_revisions
