--- a/deploy/var/drupal-config/sync/core.extension.yml
+++ b/deploy/var/drupal-config/sync/core.extension.yml
@@ -41,6 +41,9 @@ module:
   options: 0
   page_cache: 0
   path: 0
+  purge: 0
+  purge_tokens: 0
+  purge_ui: 0
   rest: 0
   restui: 0
   search: 0
@@ -51,6 +54,7 @@ module:
   spectrum_settings: 0
   sqlsrv: 0
   statistics: 0
+  supercache: 0
   system: 0
   taxonomy: 0
   text: 0
@@ -59,12 +63,16 @@ module:
   toolbar_menu: 0
   update: 0
   user: 0
+  varnish_purge_tags: 0
+  varnish_purger: 0
   video_embed_field: 0
   video_embed_media: 0
   views_ui: 0
+  wincachedrupal: 0
   menu_admin_per_menu: 1
   menu_link_content: 1
   pathauto: 1
+  xmlsitemap: 1
   views: 10
   paragraphs: 11
   standard: 1000
