--- a/deploy/var/drupal-config/sync/system.site.yml
+++ b/deploy/var/drupal-config/sync/system.site.yml
@@ -4,7 +4,7 @@ mail: admin@example.com
 slogan: ''
 page:
   403: ''
-  404: ''
+  404: /node/16
   front: /node
 admin_compact_mode: false
 weight_select_max: 100
