--- a/deploy/var/drupal-config/sync/prerender.settings.yml
+++ b/deploy/var/drupal-config/sync/prerender.settings.yml
@@ -1,6 +1,6 @@
 prerender_endpoint: 'http://service.prerender.io/'
 token: fdooT42jSO8pWtKXznjL
-css_selector: '[data-gaia-container="main"]'
+css_selector: 'body'
 expire_time: '86400'
 crawl: 1
 _core:
