--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -105,6 +105,7 @@
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.3",
     "sass-resources-loader": "^1.2.0",
+    "sassify-webpack-plugin": "^1.0.17",
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "style-loader": "^0.18.2",
