--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -18,13 +18,13 @@
     "prettify": "prettier --write --print-width 120 --tab-width 1 --use-tabs --single-quote --trailing-comma all \"src/**/*.{js,scss,ts}\""
   },
   "lint-staged": {
-    "gitDir": "./",
-    "linters": {
-      "src/**/*.{js,ts,scss}": [
-        "prettier --write --print-width 120 --tab-width 1 --use-tabs --single-quote --trailing-comma all",
-        "git add"
-      ]
-    }
+	"gitDir": "../../",
+	"linters": {
+	  "src/**/*.{js,ts,scss}": [
+		"prettier --write --print-width 120 --tab-width 1 --use-tabs --single-quote --trailing-comma all",
+		"git add"
+	  ]
+	}
   },
   "dependencies": {
     "axios": "^0.16.0",
@@ -46,7 +46,7 @@
     "seng-scss": "^1.0.0",
     "sha1": "^1.1.1",
     "vue": "^2.2.5",
-    "vue-block-system": "^0.3.1",
+    "vue-block-system": "^0.3.2",
     "vue-i18n-manager": "^3.2.2",
     "vue-router": "^2.3.0",
     "vue-transition-component": "^0.10.5",
