--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -54,7 +54,8 @@
     "vue-types": "^1.0.1",
     "vuex": "^2.2.1",
     "vuex-connect": "^1.2.0",
-    "vuex-router-sync": "^4.1.2"
+    "vuex-router-sync": "^4.1.2",
+    "wavesurfer": "^1.3.4"
   },
   "devDependencies": {
     "async": "^2.2.0",
