--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -17,6 +17,7 @@
     "prettify": "prettier --write --print-width 120 --tab-width 1 --use-tabs --single-quote --trailing-comma all \"src/**/*.{js,scss,ts}\""
   },
   "dependencies": {
+    "@vimeo/player": "^2.2.0",
     "axios": "^0.16.0",
     "babel-polyfill": "^6.23.0",
     "bows": "^1.7.0",
@@ -37,7 +38,7 @@
     "seng-scss": "^1.0.0",
     "sha1": "^1.1.1",
     "vue": "^2.2.5",
-    "vue-block-system": "^0.3.2",
+    "vue-block-system": "^0.3.4",
     "vue-i18n-manager": "^3.2.2",
     "vue-router": "^2.3.0",
     "vue-transition-component": "^0.10.5",
