--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,12 @@
         "drupal/media_entity": "1.6",
         "drupal/media_entity_video": "1.0-beta1",
         "drupal/flysystem_s3": "^1.0@alpha",
-        "drupal/cdn": "^3.0"
+        "drupal/cdn": "^3.0",
+        "drupal/purge": "^3.0@beta",
+        "drupal/supercache": "^1.3",
+        "drupal/varnish_purge": "^1.5",
+        "drupal/wincachedrupal": "^1.11",
+        "drupal/xmlsitemap": "^1.0@alpha"
     },
     "repositories": {
         "mediamonks-drupal-decoupled": {
