--- a/source/drupal/var/drupal-config/sync/field.field.paragraph.heading.field_heading_text.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.paragraph.heading.field_heading_text.yml
@@ -10,7 +10,7 @@ field_name: field_heading_text
 entity_type: paragraph
 bundle: heading
 label: Text
-description: 'For bold text, you should put in this way "<strong>text</strong>"'
+description: ''
 required: true
 translatable: false
 default_value: {  }
