--- a/source/drupal/docroot/modules/custom/spectrum_rest/spectrum_rest.routing.yml
+++ b/source/drupal/docroot/modules/custom/spectrum_rest/spectrum_rest.routing.yml
@@ -20,8 +20,8 @@ spectrum_rest.view_counter:
     _access: 'TRUE'
 
 spectrum_rest.shows_import:
-  path: 'api/v1/shows/import'
-  defaults: { _controller: '\Drupal\spectrum_rest\Controller\ShowsController::import' }
+  path: 'api/v1/shows/fetch'
+  defaults: { _controller: '\Drupal\spectrum_rest\Controller\ShowsController::fetch' }
   methods:  [POST]
   requirements:
     _access: 'TRUE'
