--- a/source/drupal/var/drupal-config/sync/search_api.index.articles.yml
+++ b/source/drupal/var/drupal-config/sync/search_api.index.articles.yml
@@ -89,18 +89,18 @@ field_settings:
         - field.storage.node.field_document_type
       module:
         - taxonomy
+  created:
+    label: 'Authored on'
+    datasource_id: 'entity:node'
+    property_path: created
+    type: date
 processor_settings:
   add_url:
     plugin_id: add_url
     settings: {  }
-  aggregated_field:
-    plugin_id: aggregated_field
+  rendered_item:
+    plugin_id: rendered_item
     settings: {  }
-  content_access:
-    plugin_id: content_access
-    settings:
-      weights:
-        preprocess_query: -10
   ignorecase:
     plugin_id: ignorecase
     settings:
@@ -113,12 +113,17 @@ processor_settings:
       weights:
         preprocess_index: -10
         preprocess_query: -10
+  aggregated_field:
+    plugin_id: aggregated_field
+    settings: {  }
   node_status:
     plugin_id: node_status
     settings: {  }
-  rendered_item:
-    plugin_id: rendered_item
-    settings: {  }
+  content_access:
+    plugin_id: content_access
+    settings:
+      weights:
+        preprocess_query: -10
 options:
   index_directly: true
   cron_limit: 50
